Fix file ingredient vertical alignment
The icons and text where vertically off.

--- a/app/stylesheets/alchemy/admin/elements.scss
+++ b/app/stylesheets/alchemy/admin/elements.scss
@@ -838,7 +838,7 @@ alchemy-publish-element-button {
     align-items: center;
     gap: var(--spacing-1);
     margin: 6px 0 var(--spacing-1);
-    padding: 0 var(--spacing-1) 0 var(--spacing-2);
+    padding: 0 var(--spacing-1);
     border-style: var(--border-style);
     border-width: var(--border-width_small);
     border-color: var(--form-field-border-color);
@@ -852,20 +852,29 @@ alchemy-publish-element-button {
     }
   }
 
-  .file_name {
+  .file_icon {
     display: inline-flex;
-    flex-grow: 1;
-    height: 100%;
     align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: var(--spacing-6);
+    height: var(--spacing-6);
+  }
+
+  .file_name {
     white-space: nowrap;
     overflow: hidden;
+    flex-grow: 1;
     font-size: var(--font-size_small);
     text-overflow: ellipsis;
-    padding: var(--spacing-1);
   }
 
   .remove_file_link {
-    width: 24px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: var(--spacing-6);
     padding: var(--spacing-1);
   }
 }
